# agent_rnaseq

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
data/: README.md  generate_data.py
demo/: RECORDING_GUIDE.md  demo.cast  demo_commands.sh
docker/: Dockerfile.api  Dockerfile.streamlit  Dockerfile.tools  docker-compose.test.yml  docker-compose.yml  tool_versions.txt
docs/: architecture.md  architecture_summary_post_planprompting.md  deployment.md  review.md  review_frontend.md  review_summary_post_reviewprompt.md  summary_post_planprompting_frontend.md
frontend/: .env.example  .env.production  .gitignore  jest.config.ts  jest.polyfills.js  jest.setup.ts  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
nextflow/: main.nf  nextflow.config
notebooks/: demo.ipynb
src/: config.py
tasks/: TASK_01_project_scaffold.md  TASK_02_database_layer.md  TASK_03_tool_layer_qc.md  TASK_04_tool_layer_alignment.md  TASK_05_tool_layer_quantification.md  TASK_06_tool_layer_variant_splicing.md  TASK_07_tool_layer_de_gsea.md  TASK_08_tool_layer_scrna.md  TASK_09_agent_layer_core.md  TASK_10_agent_layer_specialists.md  TASK_11_fastapi_service.md  TASK_12_nextflow_pipelines.md  TASK_13_aws_integration.md  TASK_14_streamlit_app.md  TASK_15_integration_tests.md  TASK_16_docker_and_deployment.md
tasks_frontend/: TASK_FE_01_scaffold.md  TASK_FE_02_api_client.md  TASK_FE_03_auth.md  TASK_FE_04_layout.md  TASK_FE_05_chat_view.md  TASK_FE_06_websocket.md  TASK_FE_07_run_status_panel.md  TASK_FE_08_run_history.md  TASK_FE_09_visualization.md  TASK_FE_10_backend_conversation_api.md  TASK_FE_11_fastapi_static.md
tests/: conftest.py  test_config.py
(+268 files in other folders)
