[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-rnaseq"
version = "0.1.0"
description = "Production-style computational pipeline agent for end-to-end RNA-seq analysis"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Data validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # ORM
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    # LLM / agent runtime
    "openai>=1.30.0",
    "langgraph>=0.1.0",
    # Cloud
    "boto3>=1.34.0",
    # Async
    "anyio>=4.4.0",
    "httpx>=0.27.0",
    # Messaging (WebSocket log streaming)
    "redis>=5.0.0",
    "websockets>=12.0",
    # Visualization
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    # Utilities
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-redis>=4.6.0",
    "sqlalchemy[mypy]>=2.0.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
